<resources>
    <string name="app_name">ShareTrip Agent</string>
    <string name="app_version">1.3.1</string>
    <string name="skip">SKIP</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forget_password">FORGET PASSWORD?</string>
    <string name="login_btn">LOG IN</string>
    <string name="register_btn">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="email">Email</string>
    <string name="next_btn">NEXT</string>
    <string name="cancel">CANCEL</string>
    <string name="check_inbox">Check Inbox</string>
    <string name="check_inbox_text_message">We’ve sent the password reset instruction to your email address. Please follow those steps.</string>
    <string name="request_submitted">Request Submitted</string>
    <string name="request_submitted_text_message">Your registration request submitted. Our dedicated team member will contact with you soon.</string>
    <string name="become_shareTrip_agent">Become a ShareTrip Agent</string>
    <string name="user_information">Primary user Information</string>
    <string name="agent_information">Company/Agency Information</string>
    <string name="company_name">Company Name</string>
    <string name="establish_date">Establish Date</string>
    <string name="district">District</string>
    <string name="title">Mr</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Contact Person Email Address</string>
    <string name="company_address">Company Address</string>
    <string name="phone_number">Contact Person Phone Number</string>
    <string name="phone_number_only">Phone Number</string>
    <string name="user_name">User Name</string>
    <string name="password">Enter Password</string>
    <string name="flying_from">Flying from</string>
    <string name="flying_to">Flying to</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="price_inclusive_of_vat_tax">*Price includes VAT &amp; Tax</string>
    <string name="flights_found">%d Flights Found</string>
    <string name="available_flights_found">%d Available Flights</string>
    <string name="available_flight_found">%d Available Flight</string>
    <string name="travelers_and_class">Travelers &amp; Class</string>
    <string name="search_flights">Search Flights</string>
    <string name="search_flightsv2">Search Flights v2</string>
    <string name="round_trip">ROUND-TRIP</string>
    <string name="one_way">One Way</string>
    <string name="multi_city">Multi-City</string>
    <string name="choose_date">Choose Date</string>
    <string name="remove">Remove</string>
    <string name="add_city">Add City</string>
    <string name="date">Date</string>
    <string name="airport">Airport</string>
    <string name="travellers">Travellers</string>
    <string name="adult">Adult</string>
    <string name="children">Children</string>
    <string name="infants">Infants</string>
    <string name="_classes">Class</string>
    <string name="economy">Economy</string>
    <string name="business">Business</string>
    <string name="first_class">First Class</string>
    <string name="premium_economy">Premium Economy</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="cheapest">Cheapest</string>
    <string name="fastest">Fastest</string>
    <string name="earliest">Earliest</string>
    <string name="book_n_hold">Book &amp; Hold</string>
    <string name="client">Client</string>
    <string name="agent">Agent</string>
    <string name="technical_stoppage_details">This flight has technical stoppage, before booking this flight please check your visa requirements as per your nationality.</string>
    <string name="sorry">Sorry!</string>
    <string name="no_available_flight_found">No available flight found. Please retry.</string>
    <string name="retry">Retry</string>
    <string name="make_proposal">Make Proposal</string>
    <string name="reset">RESET</string>
    <string name="stops">Stops</string>
    <string name="any">Any</string>
    <string name="refundable">Refundable</string>
    <string name="flight_schedule">Flight Schedule</string>
    <string name="weight">Weight</string>
    <string name="apply">Apply</string>
    <string name="done">Done</string>
    <string name="onward_depart_time">Onward Depart Time</string>
    <string name="return_depart_time">Return Depart Time</string>
    <string name="include_cancellation_policy">Include Cancellation Policy</string>
    <string name="mark_up_price">Markup Price</string>
    <string name="sample_amount">5000</string>
    <string name="prepare_mail">Prepare Mail</string>
    <string name="download">Download</string>
    <string name="send">Send</string>
    <string name="discard">Discard</string>
    <string name="recipient">Recipient</string>
    <string name="cc">cc</string>
    <string name="bc">bcc</string>
    <string name="subject">Subject</string>
    <string name="message_body">Message Body</string>
    <string name="increase_or_decrease">Increase/Decrease</string>
    <string name="continue_">Continue</string>
    <string name="required">*Required</string>
    <string name="select_your_gender">Select Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="frequent_flyer_number">Frequent Flyer number</string>
    <string name="seat_preference">Seat Preference</string>
    <string name="text_one_way">One Way</string>
    <string name="text_return">Return</string>
    <string name="text_multi_city">Multi City</string>
    <string name="booking_confirmed">Booking Confirmed!</string>
    <string name="booking_declined">Booking Declined!</string>
    <string name="issued">Issued!</string>
    <string name="issue_declined">Issue Declined!</string>
    <string name="booking_confirmation_message_greetings">Thank You. Your booking is Confirmed.\nTicket price is determined on the date of sale and is not guaranteed until issued.\nTime limit may be changed. The actual time limit should be requested through email.\nKindly issue/cancel the PNR before the booking is automatically expired/cancelled by the Airlines to avoid Airlines penalty/ADM.
    </string>
    <string name="booking_confirmation_message">Explore more for Amazing Hotel Deals.</string>
    <string name="booking_declined_message">Don’t worry. Please enter your information and
        \ntry again.</string>
    <string name="home_btn">HOME</string>
    <string name="retry_btn">RETRY</string>
    <string name="booking_confirmation_title">Confirmation</string>
    <string name="verify_information_title">Verify Information</string>
    <string name="full_name_title">Full Name (Given Name + Surname)</string>
    <string name="gender_title">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="passport_number">Passport Number</string>
    <string name="passport_expire_date">Passport Expire Date</string>
    <string name="nationality">Nationality</string>
    <string name="ffn">FFN (if any)</string>
    <string name="seat">Seat</string>
    <string name="selected_meal_type">Selected meal type</string>
    <string name="request_wheelchair">Request wheelchair</string>
    <string name="passport_copy">Passport Copy</string>
    <string name="visa_copy">Visa Copy</string>
    <string name="non_refundable">Non-refundable</string>
    <string name="see_details">See Details</string>
    <string name="baggage_policy">Baggage Policy</string>
    <string name="cancellation_policy">Cancellation Policy</string>
    <string name="total_payable">Total Payable</string>
    <string name="total_airfare">Total Airfare</string>
    <string name="total_amount">Amount to be Paid</string>
    <string name="bdt">BDT</string>
    <string name="baggage">Baggage</string>
    <string name="air_fair_rules">Air Fare Rules</string>
    <string name="fare_diff">Fare Difference</string>
    <string name="fair_details">Fare Details</string>
    <string name="hello_blank_fragment">Blank Fragment</string>
    <string name="contact_info">Contact Information</string>
    <string name="edit">EDIT</string>
    <string name="term_and_condition">By Booking Issuing this Ticket I agree to ShareTrip Terms &amp; Conditions</string>
    <string name="by_clicking_terms_and_condition">By clicking Sign Up, you agree to have read and accept our <a href="https://sharetrip.net/terms">Terms and Conditions</a> and <a href="https://sharetrip.net/privacy">Privacy Policy</a>.</string>
    <string name="travelers_economy">%d Travelers - %s</string>
    <string name="origin_city_or_airport">Origin City Or Airport</string>
    <string name="recharge_topUp_balance_txt">Recharge Topup Balance</string>
    <string name="sufficient_balance_txt">You do not have sufficient Balance</string>
    <string name="option_unavailable_msg">Booking Option is not Available</string>
    <string name="topUp_btn">TOPUP</string>
    <string name="booking_summary_title">Booking Summary</string>
    <string name="airport_name">DAC-KUL</string>
    <string name="travel_info">22 Dec 19 – 25 Jan 20, 6 Traveller(s)</string>
    <string name="checkout_title">Checkout</string>
    <string name="meal_type">Select meal type (optional)</string>
    <string name="wheelchair_text">Request wheelchair (optional)</string>
    <string name="special_note">Special Note/Instruction</string>
    <string name="children_dob_title">Children %d Date of Birth</string>
    <string name="age_on_the_day_of_travel">*Age on the day of travel</string>
    <string name="fill_children_date_of_birth">Fill up children(s) date of birth</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="transactions">Transactions</string>
    <string name="payment">Payment</string>
    <string name="more">More</string>
    <string name="flights">Flight</string>
    <string name="hotels">Hotel</string>
    <string name="holiday">Holiday</string>
    <string name="tour">Tour</string>
    <string name="flight_tracker">Flight Tracker</string>
    <string name="not_required">Not Required</string>
    <string name="upload">Upload</string>
    <string name="filter_reset">Filter data cleared</string>
    <string name="flight_selected">flights selected</string>
    <string name="technical_stoppage_explanation">"Note: This flight has technical stoppage at %s , %s (%s), Before booking this flight, please check you visa requirement as per your Nationality by mailing at flight@sharetrip.net."</string>
    <string name="tap_to_select">Tap to Select</string>
    <string name="mail_details">Mail Details</string>
    <string name="amount">Amount</string>
    <string name="downloaded">File Downloaded</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="temporary_cancel">Temporary Cancel</string>
    <string name="void_">Void</string>
    <string name="refund">Refund</string>
    <string name="date_change">Date Change</string>
    <string name="download_voucher">Download voucher</string>
    <string name="issue_ticket">Issue ticket</string>
    <string name="modify_booking">Modify booking</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="less_options">Less Options</string>
    <string name="proposal">Proposal</string>
    <string name="void_refund_change">Void/Refund/Change</string>
    <string name="group_tour">Group Tour</string>
</resources>