<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/flight_search_dest"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/booking_history"
        android:icon="@drawable/ic_bookings_black_24dp"
        android:title="@string/booking" />

    <item
        android:id="@+id/transaction_list_dest"
        android:icon="@drawable/ic_transaction_black_24dp"
        android:title="@string/transactions" />

    <item
        android:id="@+id/payment_dest"
        android:icon="@drawable/ic_payment_black_24dp"
        android:title="@string/payment" />
    <item
        android:id="@+id/more_dest"
        android:icon="@drawable/ic_more_black_24dp"
        android:title="@string/more" />
</menu>