<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary"
            android:theme="@style/MyThemeOverlay_Toolbar"
            app:title="@string/booking_confirmation_title"
            app:navigationIcon="@drawable/ic_left_white_24dp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_submitted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            app:srcCompat="@drawable/ic_image_payment_108dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_booking_confirmed"
            style="@style/headlineLabel"
            android:layout_marginTop= "@dimen/spacing_huge"
            android:text="@string/recharge_topUp_balance_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_submitted" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_booking_confirmed_greetings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop= "@dimen/spacing_small"
            android:text="@string/sufficient_balance_txt"
            android:textColor="@color/dark_variant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_booking_confirmed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_booking_confirmed_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop= "@dimen/spacing_tiny"
            android:text="@string/option_unavailable_msg"
            android:textColor="@color/dark_variant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_booking_confirmed_greetings" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_home"
            style="@style/customButton"
            android:layout_marginTop="32dp"
            android:text="@string/topUp_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_booking_confirmed_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
