<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_left_back_24dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_login"
            android:layout_width="204dp"
            android:layout_height="186dp"
            android:layout_marginTop="32dp"
            app:srcCompat="@drawable/ic_request_submitted_120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_request_submitted"
            style="@style/headlineLabel"
            android:layout_marginTop= "@dimen/spacing_huge"
            android:text="@string/request_submitted"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_login" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/check_inbox_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart= "@dimen/spacing_extra_large"
            android:layout_marginTop= "@dimen/spacing_normal"
            android:layout_marginEnd= "@dimen/spacing_extra_large"
            android:text="@string/request_submitted_text_message"
            android:textColor="@color/dark_variant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_request_submitted" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/customButton"
            android:layout_marginTop= "@dimen/spacing_huge"
            android:text="@string/login_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/check_inbox_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
